--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,49 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #c3c3c3;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+  border: 1px solid;
+  padding: 50px 100px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label,
+input,
+button {
+  width: 100%;
+  max-width: 250px;
+}
+
+button {
+  border: none;
+  padding: 5px;
+  cursor: pointer;
+}
+
+h2 {
+  border-bottom: 1px solid;
+  padding: 0 0 15px;
+}
+
+article {
+  border-radius: 15px;
+  border: 1px solid;
+  margin: 0 0 25px;
+  padding: 25px 50px;
 }
